Added DepartmentTotal.cs Model which got 2 properties

--- a/WebAppnTier/BusinessLayer/BusinessLayer.csproj
+++ b/WebAppnTier/BusinessLayer/BusinessLayer.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DepartmentTotal.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeBusinessLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
