--- a/WebAppnTier/WebAppnTier/WebAppnTier.csproj
+++ b/WebAppnTier/WebAppnTier/WebAppnTier.csproj
@@ -136,6 +136,7 @@
     <Content Include="Views\Employee\Edit.cshtml" />
     <Content Include="Views\Employee\Delete.cshtml" />
     <Content Include="Views\Employee\Details.cshtml" />
+    <Content Include="Views\Employee\EmployeeByDepartment.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
