Jquery some more events

--- a/Jquery/Jquery/Jquery.csproj
+++ b/Jquery/Jquery/Jquery.csproj
@@ -94,6 +94,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="images\help.png" />
     <Content Include="images\images.jpg" />
     <Content Include="images\web-scraper.png" />
     <Content Include="Scripts\bootstrap.js" />
@@ -132,6 +133,7 @@
     <Content Include="Views\Home\SelectorExtended.cshtml" />
     <Content Include="Views\Home\Animation.cshtml" />
     <Content Include="Views\Home\JsonPage.cshtml" />
+    <Content Include="Views\Home\JqueryClass.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
