--- a/WebServiceConsumption/WebServiceConsumption/Web.config
+++ b/WebServiceConsumption/WebServiceConsumption/Web.config
@@ -51,7 +51,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:64598/SampleWebservice.asmx"
+      <endpoint address="http://localhost/Webservicekarna/SampleWebservice.asmx"
         binding="basicHttpBinding" bindingConfiguration="SampleWebserviceSoap"
         contract="ServiceReference1.SampleWebserviceSoap" name="SampleWebserviceSoap" />
     </client>
