--- a/DVD_RENTAL/DVD_RENTAL/Web.config
+++ b/DVD_RENTAL/DVD_RENTAL/Web.config
@@ -32,6 +32,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -46,10 +50,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings>
-  <add name="CustomerContext"
-       connectionString="server=NIKSON-PC\SQLEXPRESS;user id=sa; password=1k2k3k4k5k6k;database=DVDrental" 
-       providerName="System.Data.SqlClient" />  
-
-</connectionStrings>
+  <connectionStrings>
+    <add name="CustomerContext" connectionString="metadata=res://*/Models.Customer.csdl|res://*/Models.Customer.ssdl|res://*/Models.Customer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NIKSON-PC\SQLEXPRESS;user id=sa;password=1k2k3k4k5k6k;database=DVDrental;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DVDrentalEntities" connectionString="metadata=res://*/Models.emp.csdl|res://*/Models.emp.ssdl|res://*/Models.emp.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NIKSON-PC\SQLEXPRESS;initial catalog=DVDrental;user id=sa;password=1k2k3k4k5k6k;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
+<!--<connectionStrings>
+    <add name="CustomerContext" connectionString="server=NIKSON-PC\SQLEXPRESS;user id=sa;password=1k2k3k4k5k6k;database=DVDrental" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>-->
