--- a/Banking/BankSoftware/BankSoftwareUILayer.csproj
+++ b/Banking/BankSoftware/BankSoftwareUILayer.csproj
@@ -68,7 +68,10 @@
   <ItemGroup>
     <Content Include="admin\admin.aspx" />
     <Content Include="admin\Web.config" />
+    <Content Include="bank\accountCreations.aspx" />
+    <Content Include="bank\Home.aspx" />
     <Content Include="errors\Web.config" />
+    <Content Include="bank\Web.config" />
     <None Include="packages.config" />
     <Content Include="errors\errorPage.aspx" />
     <Content Include="Global.asax" />
@@ -81,12 +84,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="accountSettings.aspx" />
+    <Content Include="bank\accountSettings.aspx" />
     <Content Include="adsXML\bankads.xml" />
-    <Content Include="bankApplication.aspx" />
+    <Content Include="bank\bankApplication.aspx" />
     <Content Include="register\cashier.aspx" />
     <Content Include="cashierLogin.aspx" />
-    <Content Include="checking.aspx" />
+    <Content Include="bank\checking.aspx" />
     <Content Include="register\customer.aspx" />
     <Content Include="login.aspx" />
     <Content Include="images\appstorebutton.png" />
@@ -102,8 +105,8 @@
     <Content Include="images\promo.png" />
     <Content Include="images\Youtube.png" />
     <Content Include="logout.aspx" />
-    <Content Include="saving.aspx" />
-    <Content Include="transaction.aspx" />
+    <Content Include="bank\saving.aspx" />
+    <Content Include="bank\transaction.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -111,11 +114,18 @@
     <Content Include="adsXML\youtubeads.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="accountSettings.aspx.cs">
+    <Compile Include="bank\accountCreations.aspx.cs">
+      <DependentUpon>accountCreations.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="bank\accountCreations.aspx.designer.cs">
+      <DependentUpon>accountCreations.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="bank\accountSettings.aspx.cs">
       <DependentUpon>accountSettings.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="accountSettings.aspx.designer.cs">
+    <Compile Include="bank\accountSettings.aspx.designer.cs">
       <DependentUpon>accountSettings.aspx</DependentUpon>
     </Compile>
     <Compile Include="admin\admin.aspx.cs">
@@ -125,12 +135,19 @@
     <Compile Include="admin\admin.aspx.designer.cs">
       <DependentUpon>admin.aspx</DependentUpon>
     </Compile>
-    <Compile Include="bankApplication.aspx.cs">
+    <Compile Include="bank\bankApplication.aspx.cs">
       <DependentUpon>bankApplication.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="bankApplication.aspx.designer.cs">
+    <Compile Include="bank\bankApplication.aspx.designer.cs">
       <DependentUpon>bankApplication.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="bank\Home.aspx.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="bank\Home.aspx.designer.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
     <Compile Include="errors\errorPage.aspx.cs">
       <DependentUpon>errorPage.aspx</DependentUpon>
@@ -156,11 +173,11 @@
     <Compile Include="cashierLogin.aspx.designer.cs">
       <DependentUpon>cashierLogin.aspx</DependentUpon>
     </Compile>
-    <Compile Include="checking.aspx.cs">
+    <Compile Include="bank\checking.aspx.cs">
       <DependentUpon>checking.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="checking.aspx.designer.cs">
+    <Compile Include="bank\checking.aspx.designer.cs">
       <DependentUpon>checking.aspx</DependentUpon>
     </Compile>
     <Compile Include="register\customer.aspx.cs">
@@ -185,18 +202,18 @@
       <DependentUpon>logout.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="saving.aspx.cs">
+    <Compile Include="bank\saving.aspx.cs">
       <DependentUpon>saving.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="saving.aspx.designer.cs">
+    <Compile Include="bank\saving.aspx.designer.cs">
       <DependentUpon>saving.aspx</DependentUpon>
     </Compile>
-    <Compile Include="transaction.aspx.cs">
+    <Compile Include="bank\transaction.aspx.cs">
       <DependentUpon>transaction.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="transaction.aspx.designer.cs">
+    <Compile Include="bank\transaction.aspx.designer.cs">
       <DependentUpon>transaction.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
