--- a/Banking/ClassLibrary1/DALlayer.csproj
+++ b/Banking/ClassLibrary1/DALlayer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="account.cs" />
     <Compile Include="checkingSQL.cs" />
     <Compile Include="CRUD_Operation.cs" />
+    <Compile Include="savingSQL.cs" />
     <Compile Include="UserCreatnRegister.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
