--- a/WebServiceConsumption/WebServiceConsumption/packages.config
+++ b/WebServiceConsumption/WebServiceConsumption/packages.config
@@ -2,9 +2,9 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="AspNet.ScriptManager.bootstrap" version="3.0.0" targetFramework="net461" />
-  <package id="AspNet.ScriptManager.jQuery" version="1.10.2" targetFramework="net461" />
+  <package id="AspNet.ScriptManager.jQuery" version="3.3.1" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
-  <package id="jQuery" version="1.10.2" targetFramework="net461" />
+  <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net461" />
@@ -18,6 +18,10 @@
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
