--- a/Banking/BankSoftware/BankSoftwareUILayer.csproj
+++ b/Banking/BankSoftware/BankSoftwareUILayer.csproj
@@ -68,14 +68,23 @@
   <ItemGroup>
     <Content Include="admin\admin.aspx" />
     <Content Include="admin\Web.config" />
-    <Content Include="bank\accountCreations.aspx" />
-    <Content Include="bank\Home.aspx" />
+    <Content Include="customer\accountCreations.aspx" />
+    <Content Include="customer\BillPayment.aspx" />
+    <Content Include="customer\Credit.aspx" />
+    <Content Include="customer\Home.aspx" />
     <Content Include="errors\Web.config" />
-    <Content Include="bank\Web.config" />
+    <Content Include="customer\Web.config" />
     <None Include="packages.config" />
     <Content Include="errors\errorPage.aspx" />
     <Content Include="Global.asax" />
     <Content Include="register\Web.config" />
+    <None Include="scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="scripts\jquery-3.3.1.js" />
+    <Content Include="scripts\jquery-3.3.1.min.js" />
+    <Content Include="scripts\jquery-3.3.1.slim.js" />
+    <Content Include="scripts\jquery-3.3.1.slim.min.js" />
+    <Content Include="scripts\jquery-3.3.1.slim.min.map" />
+    <Content Include="scripts\jquery-3.3.1.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -84,12 +93,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bank\accountSettings.aspx" />
+    <Content Include="customer\accountSettings.aspx" />
     <Content Include="adsXML\bankads.xml" />
-    <Content Include="bank\bankApplication.aspx" />
+    <Content Include="customer\bankApplication.aspx" />
     <Content Include="register\cashier.aspx" />
     <Content Include="cashierLogin.aspx" />
-    <Content Include="bank\checking.aspx" />
+    <Content Include="customer\checking.aspx" />
     <Content Include="register\customer.aspx" />
     <Content Include="login.aspx" />
     <Content Include="images\appstorebutton.png" />
@@ -105,8 +114,8 @@
     <Content Include="images\promo.png" />
     <Content Include="images\Youtube.png" />
     <Content Include="logout.aspx" />
-    <Content Include="bank\saving.aspx" />
-    <Content Include="bank\transaction.aspx" />
+    <Content Include="customer\saving.aspx" />
+    <Content Include="customer\transaction.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -114,18 +123,18 @@
     <Content Include="adsXML\youtubeads.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="bank\accountCreations.aspx.cs">
+    <Compile Include="customer\accountCreations.aspx.cs">
       <DependentUpon>accountCreations.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="bank\accountCreations.aspx.designer.cs">
+    <Compile Include="customer\accountCreations.aspx.designer.cs">
       <DependentUpon>accountCreations.aspx</DependentUpon>
     </Compile>
-    <Compile Include="bank\accountSettings.aspx.cs">
+    <Compile Include="customer\accountSettings.aspx.cs">
       <DependentUpon>accountSettings.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="bank\accountSettings.aspx.designer.cs">
+    <Compile Include="customer\accountSettings.aspx.designer.cs">
       <DependentUpon>accountSettings.aspx</DependentUpon>
     </Compile>
     <Compile Include="admin\admin.aspx.cs">
@@ -135,18 +144,32 @@
     <Compile Include="admin\admin.aspx.designer.cs">
       <DependentUpon>admin.aspx</DependentUpon>
     </Compile>
-    <Compile Include="bank\bankApplication.aspx.cs">
+    <Compile Include="customer\bankApplication.aspx.cs">
       <DependentUpon>bankApplication.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="bank\bankApplication.aspx.designer.cs">
+    <Compile Include="customer\bankApplication.aspx.designer.cs">
       <DependentUpon>bankApplication.aspx</DependentUpon>
     </Compile>
-    <Compile Include="bank\Home.aspx.cs">
+    <Compile Include="customer\BillPayment.aspx.cs">
+      <DependentUpon>BillPayment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="customer\BillPayment.aspx.designer.cs">
+      <DependentUpon>BillPayment.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="customer\Credit.aspx.cs">
+      <DependentUpon>Credit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="customer\Credit.aspx.designer.cs">
+      <DependentUpon>Credit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="customer\Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="bank\Home.aspx.designer.cs">
+    <Compile Include="customer\Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
     <Compile Include="errors\errorPage.aspx.cs">
@@ -173,11 +196,11 @@
     <Compile Include="cashierLogin.aspx.designer.cs">
       <DependentUpon>cashierLogin.aspx</DependentUpon>
     </Compile>
-    <Compile Include="bank\checking.aspx.cs">
+    <Compile Include="customer\checking.aspx.cs">
       <DependentUpon>checking.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="bank\checking.aspx.designer.cs">
+    <Compile Include="customer\checking.aspx.designer.cs">
       <DependentUpon>checking.aspx</DependentUpon>
     </Compile>
     <Compile Include="register\customer.aspx.cs">
@@ -202,18 +225,18 @@
       <DependentUpon>logout.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="bank\saving.aspx.cs">
+    <Compile Include="customer\saving.aspx.cs">
       <DependentUpon>saving.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="bank\saving.aspx.designer.cs">
+    <Compile Include="customer\saving.aspx.designer.cs">
       <DependentUpon>saving.aspx</DependentUpon>
     </Compile>
-    <Compile Include="bank\transaction.aspx.cs">
+    <Compile Include="customer\transaction.aspx.cs">
       <DependentUpon>transaction.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="bank\transaction.aspx.designer.cs">
+    <Compile Include="customer\transaction.aspx.designer.cs">
       <DependentUpon>transaction.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
