--- a/Banking/BankSoftware/Web.config
+++ b/Banking/BankSoftware/Web.config
@@ -7,7 +7,7 @@
   <system.web>
    
 <authentication mode="Forms">
-  <forms defaultUrl="~/bank/Home.aspx" loginUrl="~/login.aspx">
+  <forms defaultUrl="~/customer/Home.aspx" loginUrl="~/login.aspx">
     <!--here the credentials is from the database-->
   </forms>
 </authentication>
