--- a/Banking/BusinessLayer/BusinessLayer.csproj
+++ b/Banking/BusinessLayer/BusinessLayer.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="accounts.cs" />
     <Compile Include="checkingOperation.cs" />
+    <Compile Include="creditOperation.cs" />
     <Compile Include="CRUD_Operations.cs" />
     <Compile Include="savingOperation.cs" />
     <Compile Include="UserAccess.cs" />
