--- a/Banking/BankSoftware/BankSoftwareUILayer.csproj
+++ b/Banking/BankSoftware/BankSoftwareUILayer.csproj
@@ -44,6 +44,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="itextsharp">
+      <HintPath>..\..\..\..\..\Desktop\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -68,7 +71,10 @@
   <ItemGroup>
     <Content Include="admin\admin.aspx" />
     <Content Include="admin\Web.config" />
+    <Content Include="about.html" />
+    <Content Include="help.html" />
     <Content Include="customer\accountCreations.aspx" />
+    <Content Include="bank.html" />
     <Content Include="customer\BillPayment.aspx" />
     <Content Include="customer\Credit.aspx" />
     <Content Include="customer\Home.aspx" />
